# OSM-productiestraat

./: Makefile.am  Makefile.in  PathsAndSymbols.xml  README  autogen.sh  configure  configure.ac  cppcheck.out  licence.txt
Config/: ProjectTemplateConfig.h  ProjectTemplateLinuxConfig.h  ProjectTemplateMinGWConfig.h  config.h.in
Exe1/: AbstractProductionControl.hpp  Buffer.cpp  Buffer.hpp  ConfigStructs.hpp  Defines.hpp  Factory.cpp  Factory.hpp  FactoryClock.hpp  LoadConfiguration.cpp  LoadConfiguration.hpp  LocalMachine.cpp  LocalMachine.hpp  LocalMachine_test.cpp  Main.cpp  Makefile.am  Makefile.in  ProductionControl.cpp  ProductionControl.hpp  ProductionControl_test.cpp  ProductionScheduling.cpp  ProductionScheduling.hpp  ProxyClock.cpp  ProxyClock.hpp  ProxyMachine.cpp  ProxyMachine.hpp  configDureMachineDureTafel.ini  configDureMachineDureTafel_inpakmachine.ini  configDureMachineDureTafel_testing.ini  configDureMachineDureTafel_testing.ini.new  configDureMachineGoedkopeTafel.ini  configForUnitTest.ini  configGoedkopeMachineDureTafel.ini  configGoedkopeMachineGoedkopeTafel.ini  configGoedkopeMachineGoedkopeTafel.ini.new  master.ini  masterDuur.ini  masterGoedkoop.ini  test.ini
Exe1/IniParser/: IniParser.hpp
Exe1/Logger/: Log_to_console.cpp  Log_to_console.hpp  Log_to_file.cpp  Log_to_file.hpp  Logger_instance.hpp  Queue.cpp  Queue.hpp  Queued_logger.cpp  Queued_logger.hpp  Queued_logger_test.cpp
Exe1/Network/: Client.hpp  CommunicationService.cpp  CommunicationService.hpp  Message.hpp  MessageHandler.hpp  Server.hpp  Session.hpp  controlNetworkHandler.cpp  controlNetworkHandler.hpp  controlNetworkHandlerMethods.hpp  machineNetworkHandler.cpp  machineNetworkHandler.hpp  machineNetworkHandlerMethods.hpp
Exe2/: AbstractEventHandler.hpp  AbstractMachine.hpp  AbstractState.cpp  AbstractState.hpp  Clock.cpp  Clock.hpp  ConcreteState.cpp  ConcreteState.hpp  EventContent.hpp  Events.cpp  Events.hpp  Machine.cpp  Machine.hpp  MachineCalculations.cpp  MachineCalculations.hpp  MachineConfig.hpp  MachineState.hpp  Machine_test.cpp  Main.cpp  Makefile.am  Makefile.in  ProxyProductionControl.cpp  ProxyProductionControl.hpp  configMachineNetwork.ini
Lib1/: Lib1.cpp  Lib1.hpp  Makefile.am  Makefile.in  Object.cpp  Object.hpp
Lib2/: Lib2.cpp  Lib2.hpp  Makefile.am  Makefile.in
TestExe1/: Main.cpp  Makefile.am  Makefile.in
TestExe2/: Main.cpp  Makefile.am  Makefile.in  Object_test.cpp
autom4te.cache/: output.1  requests  traces.0  traces.2
defines/: turnOffDebug.bat  turnOffNetwork.bat  turnOffUnitTest.bat  turnOnDebug.bat  turnOnNetwork.bat  turnOnUnitTest.bat
linux/: Makefile  config.status  libtool
linux/Config/: config.h
linux/Exe1/: MachineRepairTime.csv  Makefile  test.csv
linux/Exe1/.deps/: exe1-Buffer.Po  exe1-Factory.Po  exe1-LoadConfiguration.Po  exe1-LocalMachine.Po  exe1-LocalMachine_test.Po  exe1-Main.Po  exe1-ProductionControl.Po  exe1-ProductionControl_test.Po  exe1-ProductionScheduling.Po  exe1-ProxyClock.Po  exe1-ProxyMachine.Po  exe2-Buffer.Po  exe2-LoadConfiguration.Po  exe2-LocalMachine.Po  exe2-ProductionControl.Po  exe2-ProxyClock.Po  exe2-ProxyMachine.Po
linux/Exe1/Logger/.deps/: exe1-Log_to_console.Po  exe1-Log_to_file.Po  exe1-Queue.Po  exe1-Queued_logger.Po  exe1-Queued_logger_test.Po  exe2-Log_to_console.Po  exe2-Log_to_file.Po  exe2-Queue.Po  exe2-Queued_logger.Po
linux/Exe1/Network/.deps/: exe1-CommunicationService.Po  exe1-Messagequeue.Po  exe1-controlNetworkHandler.Po  exe1-machineNetworkHandler.Po  exe2-CommunicationService.Po  exe2-Messagequeue.Po  exe2-controlNetworkHandler.Po  exe2-machineNetworkHandler.Po
linux/Exe2/: Makefile
linux/Exe2/.deps/: exe1-AbstractState.Po  exe1-Clock.Po  exe1-ConcreteState.Po  exe1-Events.Po  exe1-Machine.Po  exe1-MachineCalculations.Po  exe1-Machine_test.Po  exe1-ProxyProductionControl.Po  exe2-AbstractState.Po  exe2-Clock.Po  exe2-ConcreteState.Po  exe2-Events.Po  exe2-Machine.Po  exe2-MachineCalculations.Po  exe2-Machine_test.Po  exe2-Main.Po  exe2-ProxyProductionControl.Po
linux/Lib1/: Makefile
linux/Lib2/: Makefile
linux/TestExe1/: Makefile
linux/TestExe2/: Makefile
r/: GrafiekenAlgemeen.R  GrafiekenMachine.R
