lib_LTLIBRARIES = liblib2.la

liblib2_la_SOURCES =	Lib2.cpp

liblib2_la_CPPFLAGS = 	$(AM_CPPFLAGS) $(PROJECTTEMPLATE_CPPFLAGS)	\
						-DPROJECTTEMPLATEDLL=1	\
						-I $(top_srcdir)/Config

liblib2_la_CFLAGS 	= 	$(AM_CFLAGS) $(PROJECTTEMPLATE_CFLAGS) $(WX_CFLAGS)

liblib2_la_CXXFLAGS = 	$(AM_CXXFLAGS) $(PROJECTTEMPLATE_CXXFLAGS) $(BOOST_CPPFLAGS) $(WX_CXXFLAGS)

liblib2_la_LDFLAGS = 	$(AM_LDFLAGS) $(PROJECTTEMPLATE_LDFLAGS) $(BOOST_LDFLAGS) $(WX_LDFLAGS)

liblib2_la_LIBADD 	=	$(BOOST_LIBS)	\
						$(SOCKET_LIBS)	\
						$(WX_LIBS)

