bin_PROGRAMS =	testexe1

testexe1_SOURCES = 	Main.cpp	\
					Object_test.cpp

testexe1_CPPFLAGS =	$(AM_CPPFLAGS) $(PROJECTTEMPLATE_CPPFLAGS) $(WX_CPPFLAGS)	\
					-DPROJECTTEMPLATEEXE=1	\
					-I $(top_srcdir)/Config

testexe1_CFLAGS = 	$(AM_CFLAGS) $(PROJECTTEMPLATE_CFLAGS) $(WX_CFLAGS)

testexe1_CXXFLAGS = $(AM_CXXFLAGS) $(PROJECTTEMPLATE_CXXFLAGS) $(BOOST_CPPFLAGS) $(WX_CXXFLAGS)

testexe1_LDFLAGS = 	$(AM_LDFLAGS) $(PROJECTTEMPLATE_LDFLAGS) $(BOOST_LDFLAGS) $(WX_LDFLAGS)

testexe1_LDADD =	$(BOOST_LIBS)	\
					$(SOCKET_LIBS)	\
					$(WX_LIBS)
