bin_PROGRAMS =	testexe2

testexe2_SOURCES = 	Main.cpp	\
					Object_test.cpp

testexe2_CPPFLAGS =	$(AM_CPPFLAGS) $(PROJECTTEMPLATE_CPPFLAGS) $(WX_CPPFLAGS)	\
					-DPROJECTTEMPLATEEXE=1	\
					-I $(top_srcdir)/Config

testexe2_CFLAGS = 	$(AM_CFLAGS) $(PROJECTTEMPLATE_CFLAGS) $(WX_CFLAGS)

testexe2_CXXFLAGS = $(AM_CXXFLAGS) $(PROJECTTEMPLATE_CXXFLAGS) $(BOOST_CPPFLAGS) $(WX_CXXFLAGS)

testexe2_LDFLAGS = 	$(AM_LDFLAGS) $(PROJECTTEMPLATE_LDFLAGS) $(BOOST_LDFLAGS) $(WX_LDFLAGS)

testexe2_LDADD =	$(BOOST_LIBS)	\
					$(SOCKET_LIBS)	\
					$(WX_LIBS)

TESTS=testexe2
